# parallel_computing_in_practice

./: LICENSE  README.md
level_zero_examples/: CMakeLists.txt  README.md
level_zero_examples/zello_world/: CMakeLists.txt
ocl_examples/: README.md
ocl_examples/detect_opencl_device/: CMakeLists.txt  detect_opencl_devices.c
sycl_examples/: README.md
sycl_examples/axpy/: CMakeLists.txt  axpy_buf_acc.cpp  axpy_usm.cpp  axpy_usm_allocator.cpp
sycl_examples/hello_sycl/: CMakeLists.txt  README.md  hello.cpp
sycl_examples/matmul/: CMakeLists.txt  README.md  nd_range-matmul.cpp  range-matmul.cpp  tiled-matmul.cpp  usm-nd_range-matmul.cpp  usm-range-matmul.cpp
sycl_examples/query-device/: CMakeLists.txt
sycl_examples/query-device/src/: CMakeLists.txt  query-device.cpp
sycl_examples/query_device/: CMakeLists.txt  query_device.cpp
sycl_examples/single_task/: CMakeLists.txt  single_task.cpp
sycl_examples/sycl-compatibility-and-interoperability/: README.md
sycl_examples/sycl-compatibility-and-interoperability/c_interface_example/: libtest.cpp  libtest.h  main.cpp
sycl_examples/sycl-compatibility-and-interoperability/cpp_interface_example/: build.bat  build.sh  libtest.cpp  libtest.h  main.cpp
sycl_examples/sycl_cache/: README.md  cache_env_vars.hpp  cache_env_vars_win.bat  cache_sample.cpp  cache_sample_usm-nd_range-matmul.cpp
sycl_examples/sycl_compiler_time_cmp/: README.md  build_ocl.bat  build_sycl.bat  build_sycl_ocl_kernel.bat  kernel_compiler_opencl.cpp  kernel_compiler_sycl.cpp  ocl_compile_kernel_time.cpp  ocl_compiler_time.cpp  ocl_simple_compile.cpp  sycl_compile_kernel_time.cpp
sycl_examples/sycl_kernel_manager/: sycl_kernel_manager.cpp
sycl_examples/vector-add/: CMakeLists.txt  README.md
sycl_examples/vector-add/src/: CMakeLists.txt
