include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)

add_subdirectory(zello_world)

set(LEVELZERO_DIR "C:/Users/gta/source/repos/parallel-computing-lab/level-zero-1.18.5-win64")
set(LZ_INC_DIR ${LEVELZERO_DIR}/include/level_zero)
set(LZ_INC_DIR ${LEVELZERO_DIR}/include)
set(LZ_LIB_DIR ${LEVELZERO_DIR}/lib)
